[ui] Fix vertical alignment of inline buttons.
Before: https://imgur.com/pWUtYPM.png
After: https://imgur.com/4yUVD1j.png
Fixed: chromium:1261767
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5003162
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/inlineButton.css
+++ b/front_end/ui/legacy/inlineButton.css
@@ -9,7 +9,7 @@
   border: 1px solid var(--sys-color-neutral-outline);
   border-radius: 4px;
   position: relative;
-  top: 7px;
+  vertical-align: sub;
   margin: 2px;
   background-color: var(--sys-color-cdt-base-container);
   justify-content: center;
